[package]
name = "magic-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.eframe]
#version = "0.18.0"
path = "../egui/eframe"

#[dependencies.bevy_egui]
#version = "0.14.0"
#default-features = false
#
#[dependencies.bevy]
#version = "0.7.0"
#default-features = false
#features = ["bevy_winit", "x11"]

